# CSGODemoTool-prop

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  readme.md
.github/workflows/: bot_review.yaml  ci.yaml  find_compilers.yaml  macos_clang.yaml  macos_find_compiler.yaml  protobuf.yml  track_cs2.yaml  update_readme.yaml  update_third_party_repo.yaml
cmake/: CMakeBasePresets.json  detech.cmake  detect.cmake  detect_detail.cmake
doc/: example.md
doc/auto_gen/: cmake_detection.md  cmake_detection_linux_x64_gcc_debug.md  cmake_detection_macos_arm64_gcc_debug.md  cmake_detection_windows-latest_msvc_debug.md  cmake_detection_windows_x64_gcc_debug.md  cmake_detection_windows_x64_msvc_debug.md  third_party_repo.md
src/: CMakeLists.txt  cpp_constexpr.cpp  cpp_lib_modules.cpp  macro.h  main.cpp
src/utility/: lib.cpp
