CMAKE_MINIMUM_REQUIRED(VERSION 3.30)

SET(CMAKE_CXX_STANDARD 23)

PROJECT(cpp_test_project CXX)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

SET_TARGET_PROPERTIES(
	${PROJECT_NAME}
	PROPERTIES FOLDER "Core"
	MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>"
)

TARGET_SOURCES(
	${PROJECT_NAME}
	PRIVATE
	cpp_constexpr.cpp
	cpp_lib_modules.cpp
)

GET_TARGET_PROPERTY(
	PROJECT_SOURCES
	${PROJECT_NAME}
	SOURCES
)

SOURCE_GROUP(
	TREE ${CMAKE_SOURCE_DIR}
	FILES ${PROJECT_SOURCES}
)

SET_DIRECTORY_PROPERTIES(PROPERTIES
	VS_STARTUP_PROJECT ${PROJECT_NAME}
)

ADD_TEST(
	NAME ${PROJECT_NAME}
	COMMAND ${PROJECT_NAME}
)