CMAKE_MINIMUM_REQUIRED(VERSION 3.30)

SET(CMAKE_CXX_STANDARD 26)

PROJECT(cpp_test_project CXX)

ADD_LIBRARY(dummy_lib STATIC utility/lib.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(
	${PROJECT_NAME}
	PRIVATE dummy_lib
)

SET_TARGET_PROPERTIES(
	${PROJECT_NAME} dummy_lib
	PROPERTIES FOLDER "Core"
	MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>"
)

#TARGET_SOURCES(
#	${PROJECT_NAME}
#	PRIVATE
#	cpp_constexpr.cpp
#	cpp_lib_modules.cpp
#)

GET_TARGET_PROPERTY(PROJECT_SOURCES ${PROJECT_NAME} SOURCES)
GET_TARGET_PROPERTY(dummy_lib_SOURCES dummy_lib SOURCES)

SOURCE_GROUP(
	TREE ${CMAKE_SOURCE_DIR}
	FILES ${PROJECT_SOURCES} ${dummy_lib_SOURCES}
)

SET_DIRECTORY_PROPERTIES(PROPERTIES
	VS_STARTUP_PROJECT ${PROJECT_NAME}
)

ADD_TEST(
	NAME ${PROJECT_NAME}
	COMMAND ${PROJECT_NAME}
)